[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["ynhame <brunoguedes.nave@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit-labelstudio = "^0.0.3"
streamlit = "^1.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
